# db_benchmark_stuff

./: Backend.dockerfile  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
backup/: .gitignore
jmeter/: Test Plan.jmx  ids.csv  results.csv
src/: error.rs  globals.rs  main.rs
src/dao/: mod.rs  paciente.rs
src/server/: mod.rs  read_many_pacients.rs  read_paciente.rs
