[package]
name = "db_benchmark_stuff"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.3"
actix-service = "2.0.2"
actix-web = "4.5.1"
bincode = "1.3.3"
chrono = { version = "0.4.38", features = ["serde"] }
env_logger = "0.11.3"
log = "0.4.21"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.6.3", features = [
    "mssql",
    "runtime-tokio-rustls",
    "macros",
] }
tokio = "1.37.0"
